--- a/android-developer.html
+++ b/android-developer.html
@@ -101,7 +101,7 @@
 <p><span class="badge badge-light">Vietnam  Ho Chi Minh Vietnam</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/RAKUNA1/743999698346096-android-mobile-app-developer'>RAKUNA Android Mobile App Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/RAKUNA1/743999698346096-android-mobile-app-developer'>RAKUNA Android Mobile App Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam  Ho Chi Minh Vietnam</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -113,7 +113,7 @@
 <p><span class="badge badge-light">Hamburg Hamburg, Deutschland</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://www.42jobs.io/android/jobs/8427-senior-android-developer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.42jobs.io/android/jobs/8427-senior-android-developer'>
 Remote Senior Android Developer at camlCase | Android jobs | 42jobs.io
 
 </a></h5> 
@@ -139,7 +139,7 @@ Android Developer at Dyson in Wiltshire | Android jobs | 42jobs.io
 <p><span class="badge badge-light">New York, NYNew York, NY</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tracktik/jobs/4012246002'>Job Application for Android Developer at TrackTik</a></h5> 
+<h5><a href='https://boards.greenhouse.io/tracktik/jobs/4012246002'>Job Application for Android Developer at TrackTik</a></h5> 
 <p><span class="badge badge-light">Montreal, QC</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -151,7 +151,7 @@ Android Developer at Dyson in Wiltshire | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://growara.recruitee.com/o/android-developer'>
+<h5><a href='https://growara.recruitee.com/o/android-developer'>
       Android Developer - Growara
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -180,7 +180,7 @@ mobile developers. We're looking for a developer who has solid, demonstrable?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/quantummetric/1f8abd0f-8902-45f5-9b77-b85aaeb5caba'>Quantum Metric - Android Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/quantummetric/1f8abd0f-8902-45f5-9b77-b85aaeb5caba'>Quantum Metric - Android Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -342,7 +342,7 @@ participating in driving our already successful banking service to new heights.<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://asg.applytojob.com/apply/dbSkZEdD9J/Jr-Android-Application-Developer'>Jr. Android Application Developer - Advanced Systems Group - Career Page</a></h5> 
+<h5><a href='http://asg.applytojob.com/apply/dbSkZEdD9J/Jr-Android-Application-Developer'>Jr. Android Application Developer - Advanced Systems Group - Career Page</a></h5> 
 <p><span class="badge badge-light">Sunnyvale, CA  Mountain View San Francisco</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -434,7 +434,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Santa Clara, CA  Redwood City</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
-<h5><a href='https://www.qptech.ie/jobs/android-developer-2/'>Android Developer | IT Jobs in Limerick, Cork &amp; Dublin</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.qptech.ie/jobs/android-developer-2/'>Android Developer | IT Jobs in Limerick, Cork &amp; Dublin</a></h5> 
 <p><span class="badge badge-light">Dublin  Dublin</span></p>
 <p>Posted on:: 2019-10-13</p>
 <hr/>
